Frontend/src/app/globals.scss
:root {
  --background: #ffffff;
  --foreground: #171717;

  --white: #fff;
  --black: #000;

  --dark-900: #3958F5;
  --dark-700: #1a1a1a;

  --gray-100: #8a8a8a;
  --green-900: #3fffa3;
  --red-900: #ff3f4b;
}

html,
body {
  height: 100%;
  width: 100%;
  overflow-x: hidden;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: flex; 
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.sidebar {
  width: 250px;
  background: var(--dark-900);
  color: var(--white);
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  overflow-y: auto;
  padding: 1rem;
  z-index: 10;
}

.main-content {
  margin-left: 250px; 
  width: calc(100% - 250px);
  padding: 1rem;
  overflow-x: hidden;
}

